src/views/snapshots/hn__views__theme_picker__tests__theme_picker_renders.snap
---
source: src/views/theme_picker.rs
expression: output
---




                    ┌Theme─────────────────────────────────┐
                    │  default-dark                        │
                    │  default-light                       │
                    │▶ monokai                             │
                    │  dracula                             │
                    │  nord                                │
                    │  gruvbox-dark                        │
                    │  gruvbox-light                       │
                    │  solarized-dark                      │
                    │  solarized-light                     │
                    │  catppuccin-mocha                    │
                    │  catppuccin-latte                    │
                    │  tokyo-night                         │
                    │                                      │
                    └──────────────────────────────────────┘
                    j/k:select  Enter:confirm  Esc:cancel
